--- a/client/src/styles/tailwind-out.css
+++ b/client/src/styles/tailwind-out.css
@@ -453,6 +453,12 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.visible {
+  visibility: visible;
+}
+.m-auto {
+  margin: auto;
+}
 .m-4 {
   margin: 1rem;
 }
@@ -477,8 +483,8 @@ video {
 .w-full {
   width: 100%;
 }
-.w-4\/5 {
-  width: 80%;
+.w-4\/6 {
+  width: 66.666667%;
 }
 .basis-auto {
   flex-basis: auto;
@@ -521,6 +527,9 @@ video {
 }
 .pt-10 {
   padding-top: 2.5rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
 }
 .text-center {
   text-align: center;
